# tct-core

./: .gitignore  .travis.yaml  .travis.yml  Changelog.md  stack-13.20.yaml  stack-7.10.yaml  stack-dev.yaml  stack.yaml  tct-core.cabal  tctlite.cabal
src/: Tct.hs
src-main/: Main.hs
src-main/Tct/Common/: Polynomial.hs
src-main/Tct/Trs/: Interpretation.hs  Trs.hs
src-main/Tct/Trs/Poly/: NaturalPolynomialInterpretation.hs  PolynomialInterpretation.hs
src-w/: tctl.hs
src/Tct/: Certificate.hs  Combinators.hs  Core.hs  Error.hs  Main.hs  Options.hs  Parser.hs  Pretty.hs  Problem.hs  SemiRing.hs  Xml.hs
src/Tct/Common/: Arguments.hs  Error.hs  O.hs  Options.hs  Parser.hs  Polynomial.hs  Pretty.hs  Ring.hs  SemiRing.hs  Xml.hs
src/Tct/Core/: Certificate.hs  Combinators.hs  Data.hs  Declaration.hs  Declarations.hs  Forks.hs  Interactive.hs  Main.hs  Options.hs  Parse.hs  Processor.hs  ProofTree.hs  SemiRing.hs  Strategy.hs  TctM.hs  Types.hs
src/Tct/Core/Common/: Concurrent.hs  Error.hs  Options.hs  Parser.hs  Pretty.hs  SemiRing.hs  Xml.hs
src/Tct/Core/Data/: Answer.hs  Certificate.hs  Declaration.hs  Forks.hs  Processor.hs  ProofTree.hs  Strategy.hs  TctM.hs  Types.hs
src/Tct/Core/Data/Declaration/: Parse.hs
src/Tct/Core/Declaration/: Parse.hs
src/Tct/Core/Main/: Mode.hs  Options.hs
src/Tct/Core/Processor/: Annotated.hs  Assumption.hs  Cast.hs  Empty.hs  Failing.hs  Identity.hs  MSum.hs  Simple.hs  Succeeding.hs  Sum.hs  Timeout.hs  Transform.hs  TransformWith.hs  Trivial.hs  Wait.hs
src/Tct/Main/: Mode.hs  Options.hs
src/Tct/Processors/: Combinators.hs  Failing.hs  Timeout.hs
