Name:               tct-core
Version:            3.0.0
Author:
  Martin Avanzini <martin.avanzini@uibk.ac.at>,
  Andreas Kochesser <andreas.kochesser@uibk.ac.at>,
  Georg Moser <georg.moser@uibk.ac.at>,
  Michael Schaper <michael.schaper@uibk.ac.at>,
  Maria Schett <maria.schett@uibk.ac.at>
Maintainer:
  Martin Avanzini <martin.avanzini@uibk.ac.at>,
  Andreas Kochesser <andreas.kochesser@uibk.ac.at>,
  Georg Moser <georg.moser@uibk.ac.at>,
  Michael Schaper <michael.schaper@uibk.ac.at>,
  Maria Schett <maria.schett@uibk.ac.at>
Category: Program Analysis
Stability: Experimental
License: BSD3
License-file: LICENSE
Homepage: http://cl-informatik.uibk.ac.at/software/tct/
Synopsis: A Complexity Analysis Framework
Description:
  The Tyrolean Complexity Tool (TcT for short) is a tool for proving 
  resource bounds for different formal systems. This package provides 
  a general transformation framework.

Cabal-version: >= 1.8
Build-type: Simple

Library
  exposed-modules:
    Tct.Core
    Tct.Core.Combinators
    Tct.Core.Common.Concurrent
    Tct.Core.Common.Error
    Tct.Core.Common.Parser
    Tct.Core.Common.Pretty
    Tct.Core.Common.SemiRing
    Tct.Core.Common.Xml
    Tct.Core.Data
    Tct.Core.Data.Answer
    Tct.Core.Data.Certificate
    Tct.Core.Data.Declaration
    Tct.Core.Data.Forks
    Tct.Core.Data.Processor
    Tct.Core.Data.ProofTree
    Tct.Core.Data.Strategy
    Tct.Core.Data.TctM
    Tct.Core.Data.Types
    Tct.Core.Declarations
    Tct.Core.Parse
    Tct.Core.Interactive
    Tct.Core.Main
    Tct.Core.Main.Mode
    Tct.Core.Main.Options
    Tct.Core.Processor.Annotated
    Tct.Core.Processor.Assumption
    Tct.Core.Processor.Cast
    Tct.Core.Processor.Empty
    Tct.Core.Processor.Failing
    Tct.Core.Processor.Identity
    Tct.Core.Processor.Succeeding
    Tct.Core.Processor.Timeout
    Tct.Core.Processor.Transform
    Tct.Core.Processor.TransformWith
    Tct.Core.Processor.Wait
  build-depends:
    ansi-wl-pprint       >= 0.6 && < 0.7,
    async                == 2.*,
    base                 == 4.*,
    bytestring           == 0.10.*,
    containers           >= 0.5 && < 0.6,
    directory            == 1.2.*,
    dyre                 == 0.8.*,
    filepath             == 1.3.*,
    mtl                  >= 2.1 && < 2.3,
    transformers         == 0.3.*,
    old-time             == 1.1.*,
    optparse-applicative == 0.11.*,
    parsec               == 3.1.*,
    process              == 1.2.*,
    temporary            == 1.2.*,
    text                 == 1.2.*,
    hexpat               >= 0.20.7
    
  hs-source-dirs: src
  ghc-options:
    -j -Wall -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
  extensions: 
    ConstraintKinds, 
    DataKinds,
    DeriveDataTypeable,
    DeriveFoldable, 
    DeriveFunctor, 
    DeriveTraversable,
    FlexibleContexts, 
    FlexibleInstances, 
    GADTs, 
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses, 
    PolyKinds,
    StandaloneDeriving,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances

