name:          tct-core
version:       3.0.0
stability:     experimental
author:
  Martin Avanzini, Andreas Kochesser, Georg Moser, Michael Schaper, Maria Schett
maintainer:
  Martin Avanzini <martin.avanzini@uibk.ac.at>,
  Andreas Kochesser <andreas.kochesser@uibk.ac.at>,
  Michael Schaper <michael.schaper@uibk.ac.at>,
  Maria Schett <maria.schett@uibk.ac.at>
license:       BSD3
license-file:  LICENSE
category:      Program Analysis
synopsis:      A Complexity Analysis Framework
description:
  The Tyrolean Complexity Tool (TcT for short) is a tool for proving 
  resource bounds for different formal systems. This package provides 
  a general transformation framework.
build-type:    Simple
cabal-version: >= 1.8

source-repository head
  type:     git
  location: git://github.com/ComputationWithBoundedResources/tct-core

library
  exposed-modules:
    Tct.Core
    Tct.Core.Common.Concurrent
    Tct.Core.Common.Error
    Tct.Core.Common.Options
    Tct.Core.Common.Parser
    Tct.Core.Common.Pretty
    Tct.Core.Common.SemiRing
    Tct.Core.Common.Xml
    Tct.Core.Data
    Tct.Core.Data.Answer
    Tct.Core.Data.Certificate
    Tct.Core.Data.Declaration
    Tct.Core.Data.Forks
    Tct.Core.Data.Processor
    Tct.Core.Data.ProofTree
    Tct.Core.Data.Strategy
    Tct.Core.Data.TctM
    Tct.Core.Data.Types
    Tct.Core.Declarations
    Tct.Core.Parse
    Tct.Core.Interactive
    Tct.Core.Main
    Tct.Core.Processor.Assumption
    Tct.Core.Processor.Empty
    Tct.Core.Processor.Transform
  build-depends:
    ansi-wl-pprint       >= 0.6 && < 0.7,
    async                == 2.*,
    base                 == 4.*,
    bytestring           == 0.10.*,
    containers           >= 0.5 && < 0.6,
    mtl                  >= 2.1 && < 2.3,
    old-time             == 1.1.*,
    optparse-applicative == 0.11.*,
    parsec               == 3.1.*,
    process              == 1.2.*,
    temporary            == 1.2.*,
    text                 == 1.2.*,
    hexpat               == 0.20.*
    
  hs-source-dirs: src
  ghc-options:
    -Wall -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
  extensions: 
    ConstraintKinds, 
    DataKinds,
    DeriveDataTypeable,
    DeriveFoldable, 
    DeriveFunctor, 
    DeriveTraversable,
    FlexibleContexts, 
    FlexibleInstances, 
    GADTs, 
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses, 
    PolyKinds,
    StandaloneDeriving,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances

